# dwmblocks-rs

./: Cargo.toml
src/: main.rs  xstuff.rs
