[package]
name = "statusbar"
version = "0.1.0"
authors = ["Raghul <nanth.raghul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
libc = "0.2.71"
x11 = { version = "2.18.2", features = ["xlib", "xinerama"] }
signal-hook = "0.3.8"
